// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthentificationAdminPageContent /> renders correctly 1`] = `
<Fragment>
  <ForwardRef(Relay(Connect(ReduxForm)))
    shieldAdminForm={
      Object {
        "introduction": "<p>Introduction text in shield mode</p>",
        "media": Object {
          "id": "image-uuid",
          "name": "image-name.jpg",
          "url": "https://capco.test/media/default/0001/01/image-name.jpg",
        },
        "shieldMode": true,
      }
    }
  />
  <Connect(Component)
    ssoConfigurations={
      Object {
        "edges": Array [
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "accessTokenUrl": "https://localhost:8888/token",
              "authorizationUrl": "https://localhost:8888/authorization",
              "clientId": "clientId",
              "id": "oauth2ID",
              "logoutUrl": "https://localhost:8888/logout",
              "name": "Open ID Provider",
              "profileUrl": "https://localhost:8888/profile",
              "secret": "SecretKey",
              "userInfoUrl": "https://localhost:8888/user",
            },
          },
        ],
      }
    }
  />
</Fragment>
`;

exports[`<AuthentificationAdminPageContent /> renders correctly when not superAdmin 1`] = `
<Fragment>
  <ForwardRef(Relay(Connect(ReduxForm)))
    shieldAdminForm={
      Object {
        "introduction": "<p>Introduction text in shield mode</p>",
        "media": Object {
          "id": "image-uuid",
          "name": "image-name.jpg",
          "url": "https://capco.test/media/default/0001/01/image-name.jpg",
        },
        "shieldMode": true,
      }
    }
  />
</Fragment>
`;
